--- a/simulation/202107atami.html
+++ b/simulation/202107atami.html
@@ -5,12 +5,12 @@
 	<meta name="description" content='2021年7月熱海市土砂災害をマップにしました。'>
 	<meta property="og:title" content="2021年7月熱海市土砂災害可視化マップ" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/20210706atami.png" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/20210706atami.png" />
 	<meta property="og:description" content="2021年7月熱海市土砂災害をマップにしました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="2021年7月熱海市土砂災害可視化マップ" />
 	<meta name="twitter:description" content='2021年7月熱海市土砂災害をマップにしました。' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/202107atami.png" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/202107atami.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
