--- a/simulation/202108heavyrain.html
+++ b/simulation/202108heavyrain.html
@@ -5,19 +5,15 @@
 <meta name="description" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。">
 <meta property="og:title" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://dpnote.netlify.app/images/202108heavyrain.png" />
+<meta property="og:image" content="https://dpnote.netlify.app/images/post/202108heavyrain.png" />
 <meta property="og:description" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
 <meta name="twitter:description" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
-<meta name="twitter:image" content="https://dpnote.netlify.app/images/202108heavyrain.png" />
+<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/202108heavyrain.png" />
 <meta name="author" content="仁志">
-<meta name="keywords" content="防災、災害対策">
-<meta name="twitter:player" content="https://dpnote.netlify.app/index.html" />
-<meta name="twitter:player:width" content="640">
-<meta name="twitter:player:height" content="480">
-<meta name="twitter:player:stream" content="https://dpnote.netlify.app/videos/202108heavyrain.mp4">
-<meta name="twitter:player:stream:content_type" content="video/mp4;">
+<meta name="keywords" content="防災,災害対策">
+
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
 <script>
