--- a/simulation/denshouhi.html
+++ b/simulation/denshouhi.html
@@ -6,11 +6,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta property="og:title" content="自然災害伝承碑マップ" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://dpnote.netlify.app/images/denshouhi.png" />
+<meta property="og:image" content="https://dpnote.netlify.app/images/post/denshouhi.png" />
 <meta property="og:description" content="自然災害伝承碑をマップにしました。" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="自然災害伝承碑マップ" />
-<meta name="twitter:image" content="https://dpnote.netlify.app/images/denshouhi.png" />
+<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/denshouhi.png" />
 <meta name="twitter:description" content="自然災害伝承碑をマップにしました。" />
 <meta name="author" content="仁志">
 <meta name="keywords" content="自然災害伝承碑,災害,防災"/>
