--- a/simulation/himawari3d.html
+++ b/simulation/himawari3d.html
@@ -6,12 +6,12 @@
   <meta name="description" content='気象庁のひまわり赤外画像を3次元で表現しました。'>
   <meta property="og:title" content="気象庁のひまわり赤外画像3次元マップ" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://dpnote.netlify.app/images/himawari3d.png" />
+  <meta property="og:image" content="https://dpnote.netlify.app/images/post/himawari3d.png" />
   <meta property="og:description" content="気象庁のひまわり赤外画像を3次元で表現しました。" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="気象庁のひまわり赤外画像3次元マップ" />
   <meta name="twitter:description" content='気象庁のひまわり赤外画像を3次元で表現しました。' />
-  <meta name="twitter:image" content="https://dpnote.netlify.app/images/himawari3d.png" />
+  <meta name="twitter:image" content="https://dpnote.netlify.app/images/post/himawari3d.png" />
   <meta name="author" content="仁志">
   <meta name="keywords" content="防災,災害対策,ひまわり赤外画像,降水ナウキャスト">
   <script src='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js'></script>
