--- a/simulation/hojoki/index.html
+++ b/simulation/hojoki/index.html
@@ -13,11 +13,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta property="og:title" content="方丈記" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/hojoki.png" />
+	<meta property="og:image" content="./images/hojoki.png" />
 	<meta property="og:description" content="方丈記の世界観を味読するため、文献を参考に可視化しました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="方丈記" />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/hojoki.png" />
+	<meta name="twitter:image" content="./images/hojoki.png" />
 	<meta name="twitter:description" content="方丈記の世界観を味読するため、文献を参考に可視化しました。" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="方丈記,災害,防災,鴨長明" />
