--- a/simulation/nankai3d.html
+++ b/simulation/nankai3d.html
@@ -6,12 +6,12 @@
   <meta name="description" content='南海トラフの震度マップを3次元で可視化しました。'>
   <meta property="og:title" content="南海トラフの震度マップ" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://dpnote.netlify.app/images/nankai3d.png" />
+  <meta property="og:image" content="https://dpnote.netlify.app/images/post/nankai3d.png" />
   <meta property="og:description" content="南海トラフの震度マップを3次元で可視化しました。" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="南海トラフの震度マップ" />
   <meta name="twitter:description" content='南海トラフの震度マップを3次元で可視化しました。' />
-  <meta name="twitter:image" content="https://dpnote.netlify.app/images/nankai3d.png" />
+  <meta name="twitter:image" content="https://dpnote.netlify.app/images/post/nankai3d.png" />
   <meta name="author" content="仁志">
   <meta name="keywords" content="防災,災害対策,南海トラフ,震度マップ">
   <script src='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js'></script>
