--- a/simulation/river/index.html
+++ b/simulation/river/index.html
@@ -5,12 +5,12 @@
 	<meta name="description" content='日本の都道府県を河川だけで表現してみました'>
 	<meta property="og:title" content="日本の都道府県を河川だけで表現してみました" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/dam.png" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/river.png" />
 	<meta property="og:description" content="日本の都道府県を河川だけで表現してみました" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="日本の都道府県を河川だけで表現してみました" />
 	<meta name="twitter:description" content='日本の都道府県を河川だけで表現してみました' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/river.png" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/river.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
