--- a/simulation/skazan/index.html
+++ b/simulation/skazan/index.html
@@ -7,11 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta property="og:title" content="火山基本図データ" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/skazan.png" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/skazan.png" />
 	<meta property="og:description" content="桜島の火山活動を受けて、国土地理院の令和4年（2022年）桜島の火山活動に関する情報をお借りし、可視化しました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="火山基本図データ" />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/skazan.png" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/skazan.png" />
 	<meta name="twitter:description" content="桜島の火山活動を受けて、国土地理院の令和4年（2022年）桜島の火山活動に関する情報をお借りし、可視化しました。" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="災害,防災,桜島,火山,火山活動" />
