--- a/simulation/tkriver/index.html
+++ b/simulation/tkriver/index.html
@@ -5,12 +5,12 @@
 	<meta name="description" content='東京都の河川ライブカメラをマップにしました。'>
 	<meta property="og:title" content="東京都河川ライブカメラマップ" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/tkriver.png" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/tkriver.png" />
 	<meta property="og:description" content="東京都の河川ライブカメラをマップにしました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="東京都河川ライブカメラマップ" />
 	<meta name="twitter:description" content='東京都の河川ライブカメラをマップにしました。' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/tkriver.png" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/tkriver.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災,災害対策">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
