--- a/simulation/watersupply.html
+++ b/simulation/watersupply.html
@@ -5,12 +5,12 @@
 	<meta name="description" content='東京都の災害時給水ステーションをマップにしました。'>
 	<meta property="og:title" content="東京都災害時給水ステーションマップ" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/watersupply.png" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/watersupply.png" />
 	<meta property="og:description" content="東京都の災害時給水ステーションをマップにしました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="東京都災害時給水ステーションマップ" />
 	<meta name="twitter:description" content='東京都の災害時給水ステーションをマップにしました。' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/watersupply.png" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/watersupply.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
