--- a/simulation/202107atami2.html
+++ b/simulation/202107atami2.html
@@ -4,12 +4,12 @@
 	<meta name="description" content='熱海市土砂災害を3Dにて可視化しました。'>
 	<meta property="og:title" content="熱海市土砂災害を3Dにて可視化しました。" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/202107atami2.png" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/202107atami2.png" />
 	<meta property="og:description" content="熱海市土砂災害を3Dにて可視化しました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="熱海市土砂災害を3Dにて可視化しました。" />
 	<meta name="twitter:description" content='熱海市土砂災害を3Dにて可視化しました。' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/202107atami2.png" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/202107atami2.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
     <title>熱海市土砂災害を3Dにて可視化しました。</title>
