--- a/simulation/earthquakelist/20210919/index.html
+++ b/simulation/earthquakelist/20210919/index.html
@@ -5,12 +5,12 @@
 	<meta name="description" content='2021年9月19日震源リスト'>
 	<meta property="og:title" content="2021年9月19日震源リスト" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/post/20210919earthquake.jpg" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/post/20210919earthquake.png" />
 	<meta property="og:description" content="2021年9月19日震源リスト" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="2021年9月19日震源リスト" />
 	<meta name="twitter:description" content='2021年9月19日震源リスト' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/20210919earthquake.jpg" />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/20210919earthquake.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
