--- a/search/index.html
+++ b/search/index.html
@@ -6,16 +6,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-202486341-1');
-  </script>
 
   <meta property="og:locale" content="ja" />
 
@@ -63,16 +53,7 @@
   <link rel="stylesheet" type="text/css" href="https://dpnote.netlify.app/css/styles.07015b78eada1bea1b52fca88d93e547841340a0660500e57454e8c127831bab2a56a85e088a1ee7723ea931072ac15f3111f1fdc3fe9bdea3f3cca3f0f6b49e.css"
   integrity="sha512-BwFbeOraG&#43;obUvyojZPlR4QTQKBmBQDldFTowSeDG6sqVqheCIoe53I&#43;qTEHKsFfMRHx/cP&#43;m96j88yj8Pa0ng==" crossorigin="anonymous">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-202486341-1');
-  </script>
   <title>アプリ内検索 | DP Note</title>
 
   <style>
@@ -231,14 +212,22 @@
   <script type="text/javascript" src="https://dpnote.netlify.app/js/bundle.min.617c4c3549a10c9fe7e1bb91e87f0722f6a285b59e742c7123c755df9fb33530bae76060ebd303966dd0e1c09813e679f8042802b7fd059315ef1345f0429ad2.js"
   integrity="sha512-YXxMNUmhDJ/n4buR6H8HIvaihbWedCxxI8dV35&#43;zNTC652Bg69MDlm3Q4cCYE&#43;Z5&#43;AQoArf9BZMV7xNF8EKa0g==" crossorigin="anonymous"></script>
 
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPP84V2NHB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-MPP84V2NHB');
+  </script>
+
+  <script src="data.js"></script>
   <script type="module">
     document.getElementById('exp').addEventListener('click',
 
       async () => {
         result.innerHTML = "";
-
-        const res = await fetch("https://dpnote.netlify.app/search/data.json");
-        const data = await res.json();
 
         let kensaku = text.value;
 
