--- a/simulation/notoearthquake3d/index.html
+++ b/simulation/notoearthquake3d/index.html
@@ -42,6 +42,16 @@
 		}
 	</style>
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MPP84V2NHB"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-MPP84V2NHB');
+	</script>
+
 	<script src="https://cyberjapandata.gsi.go.jp/3d/three.min.js"></script>
 	<script src="https://cyberjapandata.gsi.go.jp/3d/TrackballControls.js"></script>
 	<script>
