--- a/publicdns/index.html
+++ b/publicdns/index.html
@@ -250,7 +250,7 @@
       </div>
     
       <div class="item1"><a href="/population/">
-              <img src='https://dpnote.netlify.app/images/post/population.png'>
+              <img src='https://dpnote.netlify.app/images/post/population.jpg'>
           </a>
 
         <a href="/population/">防災と少子高齢化、DXの役割</a>
