--- a/higashinihonarcrotate/index.html
+++ b/higashinihonarcrotate/index.html
@@ -218,7 +218,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/notoearthquake3d/">能登半島地震の３Dによる可視化</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/notoearthquake3d/">能登半島沖地震の３Dによる可視化</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
