--- a/r67tohoku/index.html
+++ b/r67tohoku/index.html
@@ -210,7 +210,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/2024noto/"><i class="fas fa-chevron-left"></i> 令和6年1月能登半島地震の震度マップをヒートマップとして可視化</a>
+      <a class="link-reverse" href="/2024noto/"><i class="fas fa-chevron-left"></i> 能登半島沖地震の震度マップをヒートマップとして可視化</a>
     </div>
     
 
