--- a/notoearthquake3d/index.html
+++ b/notoearthquake3d/index.html
@@ -239,11 +239,11 @@
         <a href="/noto_shindomap/">能登半島沖地震の震度マップアニメーション</a>
       </div>
     
-      <div class="item1"><a href="/2024noto/">
-              <img src='https://dpnote.netlify.app/images/post/2024noto.jpg'>
+      <div class="item1"><a href="/2024notoheatmap/">
+              <img src='https://dpnote.netlify.app/images/post/2024notoheatmap.jpg'>
           </a>
 
-        <a href="/2024noto/">能登半島沖地震の震度マップをヒートマップとして可視化</a>
+        <a href="/2024notoheatmap/">能登半島沖地震の震度マップをヒートマップとして可視化</a>
       </div>
     
       <div class="item1"><a href="/kumamoto3d/">
