--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   
    
-    <a href='https://dpnote.netlify.app/category/%E9%A2%A8%E6%B0%B4%E5%AE%B3/' id = "post_mtag" class="post_tag"><i class="fas fa-tags"></i>風水害
+    <a href='https://dpnote.netlify.app/category/windflood/' id = "post_mtag" class="post_tag"><i class="fas fa-tags"></i>風水害
     </a>
 
   </span>
