--- a/atami3d/index.html
+++ b/atami3d/index.html
@@ -304,7 +304,7 @@
 
         <a href='https://linkevery2s.github.io/iamherenow/index.html' target="_blank"><img src="https://dpnote.netlify.app/images/application/iamherenow.jpg" alt="今、ここにいるよ。" width="100%"></a>
 
-        <a href='https://covid19dynamics.netlify.app/index.html' target="_blank"><img src="https://dpnote.netlify.app/images/application/covid19.jpg" alt="COVID-19 感染症動態" width="100%"></a>
+        <a href='https://linkevery2s.github.io/eye/index.html' target="_blank"><img src="https://dpnote.netlify.app/images/application/eye.jpg" alt="防災チャットボットEYE" width="100%"></a>
 
       </ul>
     </div>
