--- a/simulation/atami.html
+++ b/simulation/atami.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="ja">
-<title>能登豪雨3D</title>
+<title>熱海市土砂災害</title>
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta charset="UTF-8" name="viewport"
@@ -27,8 +27,8 @@
 
 <body>
 
-    <model-viewer ar ar-modes="scene-viewer webxr quick-look" src="https://raw.githubusercontent.com/linkevery2s/blog/refs/heads/master/3d_data/ishikawa202409.glb" ios-src="https://raw.githubusercontent.com/linkevery2s/blog/refs/heads/master/3d_data/ishikawa202409.usdz" alt="能登豪雨3D"
-        autoplay auto-rotate camera-controls></model-viewer>
+    <model-viewer ar ar-modes="scene-viewer webxr quick-look" src="https://raw.githubusercontent.com/linkevery2s/blog/refs/heads/master/3d_data/atami202107.glb" ios-src="https://raw.githubusercontent.com/linkevery2s/blog/refs/heads/master/3d_data/atami202107.usdz" alt="熱海市土砂災害"
+        autoplay auto-rotate camera-controls camera-orbit="60deg 45deg 1"></model-viewer>
 
 </body>
 
