--- a/00000japan/index.html
+++ b/00000japan/index.html
@@ -210,7 +210,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/atami3d/"><i class="fas fa-chevron-left"></i> 熱海市土砂災害を3Dにて可視化しました</a>
+      <a class="link-reverse" href="/siri/"><i class="fas fa-chevron-left"></i> Siriに防災を学ばせてみた！</a>
     </div>
     
 
