--- a/siri/index.html
+++ b/siri/index.html
@@ -216,7 +216,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/atami3d/">熱海市土砂災害を3Dにて可視化しました</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/00000japan/">00000JAPANをご紹介します。</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
