--- a/net119/index.html
+++ b/net119/index.html
@@ -164,7 +164,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/kumamotoearthquake/"><i class="fas fa-chevron-left"></i> 熊本地震「活断層図と震度マップの重ね合わせ」</a>
+      <a class="link-reverse" href="/kumamotoearthquake/"><i class="fas fa-chevron-left"></i> 熊本地震の震度マップ</a>
     </div>
     
 
