--- a/simulation/r2kyusyu.html
+++ b/simulation/r2kyusyu.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="ja">
-<title>平成12年9月の東海豪雨を3Dに可視化</title>
+<title>令和2年九州豪雨を3Dに可視化</title>
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta charset="UTF-8" name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:title" content="平成12年9月の東海豪雨を3Dに可視化" />
+    <meta property="og:title" content="令和2年九州豪雨を3Dに可視化" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://dpnote.netlify.app/simulation/h12tokai.png" />
-    <meta name="description" content="令和6年7月に起きた東海地方での豪雨を3Dに可視化しました。" />
+    <meta property="og:image" content="https://dpnote.netlify.app/simulation/r2kyusyu.png" />
+    <meta name="description" content="令和2年7月に起きた九州地方での豪雨を3Dに可視化しました。" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="平成12年9月の東海豪雨を3Dに可視化" />
-    <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/h12tokai.png" />
+    <meta name="twitter:title" content="令和2年九州豪雨を3Dに可視化" />
+    <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/r2kyusyu.png" />
     <meta name="author" content="Saito Hitoshi">
-    <meta name="keywords" content="東海,豪雨,東海豪雨,deckgl,3D,3d" />
+    <meta name="keywords" content="豪雨,九州豪雨,deckgl,3D,3d" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -111,7 +111,7 @@
 
         const { DeckGL, GridLayer, LinearInterpolator } = deck;
 
-        const data = d3.csv('./data/tokai.csv');
+        const data = d3.csv('./data/r2kyusyu.csv');
 
         const colorRange = [
             [0, 255, 255, 255],
@@ -139,8 +139,8 @@
         });
 
         let initialViewState = {
-            longitude: 136.791,
-            latitude: 34.940,
+            longitude: 130.875,
+            latitude: 32.575,
             zoom: 5.5,
             maxZoom: 20,
             pitch: 40,
