--- a/r27mkyusyu/index.html
+++ b/r27mkyusyu/index.html
@@ -21,11 +21,11 @@
 
 
 
-<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/r27kyusyu.jpg" />
+<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/r2kyusyu.jpg" />
 
 
 
-<meta property="og:image" content="https://dpnote.netlify.app/images/post/r27kyusyu.jpg">
+<meta property="og:image" content="https://dpnote.netlify.app/images/post/r2kyusyu.jpg">
 
 
 <meta property="og:url" content="https://dpnote.netlify.app/r27mkyusyu/" />
@@ -128,7 +128,7 @@
     
     <p>令和2年7月に発生した九州豪雨を３Dマップにて可視化しました。</p>
 <center>
-<iframe src ="../../simulation/r27kyusyu.html" width="100%" height="550px" frameborder="no" scrolling="no"></iframe>
+<iframe src ="../simulation/r2kyusyu.html" width="100%" height="550px" frameborder="no" scrolling="no"></iframe>
 </center>
 <p><br><br></p>
 
