--- a/r27mkyusyu/index.html
+++ b/r27mkyusyu/index.html
@@ -120,16 +120,15 @@
 
   <div class="at">
     <span id="article_time">Reading time: 0 分
-    4 秒</span>
+    5 秒</span>
   </div>
 
 
 
     
     <p>令和2年7月に発生した九州豪雨を３Dマップにて可視化しました。</p>
-<center>
 <iframe src ="../simulation/r2kyusyu.html" width="100%" height="550px" frameborder="no" scrolling="no"></iframe>
-</center>
+<a href="../simulation/r2kyusyu.html" target="_blank" class="linka">全画面で見る</a>
 <p><br><br></p>
 
 
