--- a/higashinihon_arclayer/index.html
+++ b/higashinihon_arclayer/index.html
@@ -239,7 +239,7 @@ WebGL-powered visualization framework for large-scale datasets
       </div>
     
       <div class="item1"><a href="/higashinihontsunami/">
-              <img src='https://dpnote.netlify.app/images/post/higashinihontsunami.png'>
+              <img src='https://dpnote.netlify.app/images/post/higashinihontsunami.jpg'>
           </a>
 
         <a href="/higashinihontsunami/">東日本大震災の津波観測を3Dマップにて可視化</a>
