--- a/hojoki/index.html
+++ b/hojoki/index.html
@@ -170,7 +170,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/higashinihon_arclayer/"><i class="fas fa-chevron-left"></i> 東日本大震災の津波観測地点を結んでみる</a>
+      <a class="link-reverse" href="/kumamoto3d/"><i class="fas fa-chevron-left"></i> 熊本地震を深さの次元まで含めて3Dにて可視化</a>
     </div>
     
 
