--- a/kumamoto3d/index.html
+++ b/kumamoto3d/index.html
@@ -465,7 +465,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/higashinihon_arclayer/">東日本大震災の津波観測地点を結んでみる</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/hojoki/">方丈記の世界観を可視化しました。</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
