--- a/simulation/higashinihontsunami.html
+++ b/simulation/higashinihontsunami.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
-	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta charset="UTF-8" name="viewport"
+		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<head>
@@ -20,17 +21,21 @@
 		<meta name="author" content="仁志">
 		<meta name="keywords" content="東日本大震災の津波観測マップ,マップ,3Dマップ" />
 
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MPP84V2NHB"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+			crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
+			integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ=="
+			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-			gtag('config', 'G-MPP84V2NHB');
-		</script>
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 		<script src="https://unpkg.com/deck.gl@^8.0.0/dist.min.js"></script>
+
+		<script src='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js'></script>
+		<link href='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css' rel='stylesheet' />
+
 		<style>
 			html,
 			body {
@@ -40,114 +45,172 @@
 				height: 100%;
 			}
 
-			.deck-tooltip {
-				font-family: Helvetica, Arial, sans-serif;
-				padding: 8px !important;
-				color: #fff !important;
-				background: #192f60 !important;
-				max-width: 150px;
-				font-size: .8em;
-				opacity: 0.8;
-			}
 
 			.attribution {
 				position: absolute;
-				bottom: 0;
-				right: 0;
+				bottom: 40px;
+				right: 0px;
 				z-index: 9;
 				padding: 2px 4px;
-				background-color: rgba(255, 255, 255, 0.5);
+				background-color: rgba(255, 255, 255, 0.9);
 				font-size: 11px;
 				pointer-events: auto;
+			}
+
+			.side_menu,
+			.side_menu2 {
+				position: absolute;
+				top: 10px;
+				right: 10px;
+				z-index: 15;
+			}
+
+			.button {
+				cursor: pointer;
+				color: #000000;
+				background: rgba(255, 255, 255, .8);
+				border: 1px solid #000000;
+				padding: .5em;
+				border-radius: .5em;
+				border: 1px solid #000000;
+			}
+
+			.button2 {
+				cursor: pointer;
+				color: #000000;
+				background: rgba(255, 255, 255, .8);
+				border: 1px solid #000000;
+				padding: .5em .6em .5em .6em;
+				display: none;
+				border-radius: .5em;
+				border: 1px solid #000000;
+			}
+
+			.deck-tooltip {
+				font-family: Helvetica, Arial, sans-serif;
+				padding: 8px !important;
+				color: #ffffff !important;
+				background: #192f60 !important;
+				font-size: .8em;
+				opacity: 0.8;
+				border: 1px solid #ffffff;
 			}
 		</style>
 	</head>
 
-	<body>
+<body>
 
-		<div class="attribution">
-			© <a href="http://www.openstreetmap.org/about/" target="_blank" rel="noopener noreferrer">OpenStreetMap</a> contributors、    出典：<a href="https://www.jma.go.jp/jma/kishou/books/saigaiji/saigaiji_201101/saigaiji_201101.html" target="_blank">災害時地震・津波速報 平成23年(2011年)東北地方太平洋沖地震</a>、気象庁：<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY
-			4.0</a>
-		</div>
+	<span class="side_menu">
+		<div class="button" id="rotate"><i class="fa-solid fa-rotate"></i></div>
+	</span>
 
-	</body>
+	<span class="side_menu2">
+		<div class="button2" id="stop"><i class="fa-solid fa-stop"></i></div>
+	</span>
 
-	<script type="text/javascript">
-		const {
-			Deck,
-			TileLayer,
-			BitmapLayer,
-			HexagonLayer
-		} = deck;
+	<div class="attribution">
+		出典：<a href="https://www.jma.go.jp/jma/kishou/books/saigaiji/saigaiji_201101/saigaiji_201101.html"
+			target="_blank">災害時地震・津波速報 平成23年(2011年)東北地方太平洋沖地震</a>、気象庁
+	</div>
 
-		const layer = new HexagonLayer({
-			id: 'hexagon-layer',
-			data: "./data/higashinihontsunami.json",
-			pickable: true,
-			extruded: true,
-			getElevationWeight: d => Number(d.height),
-			elevationAggregation: 'MAX',
-			getColorWeight: point => Number(point.height),
-			colorAggregation: 'MAX',
-			radius: 10000,
-			elevationScale: 4,
-			elevationRange: [0, 200000],
-			getPosition: p => [Number(p.lon), Number(p.lat)]
-		});
+</body>
 
-		const tileLayer = new TileLayer({
-			data: 'https://c.tile.openstreetmap.org/{z}/{x}/{y}.png',
-			minZoom: 0,
-			maxZoom: 19,
+<script type="module">
 
-			renderSubLayers: props => {
-				const {
-					bbox: {
-						west,
-						south,
-						east,
-						north
-					}
-				} = props.tile;
+        const { DeckGL, GridLayer, HexagonLayer, LinearInterpolator } = deck;
 
-				return new BitmapLayer(props, {
-					data: null,
-					image: props.data,
-					bounds: [west, south, east, north]
-				});
-			}
-		});
+	const layer = new HexagonLayer({
+		id: 'hexagon-layer',
+		data: "./data/higashinihontsunami.json",
+		pickable: true,
+		extruded: true,
+		getElevationWeight: d => Number(d.height),
+		elevationAggregation: 'MAX',
+		getColorWeight: point => Number(point.height),
+		colorAggregation: 'MAX',
+		radius: 10000,
+		elevationScale: 4,
+		elevationRange: [0, 200000],
+		getPosition: p => [Number(p.lon), Number(p.lat)]
+	});
 
+	let initialViewState = {
+		longitude: 136.3,
+		latitude: 37.3,
+		zoom: 4.5,
+		maxZoom: 20,
+		pitch: 40,
+		bearing: -10
+	};
 
-		const tooltip = (d) => {
-
-			if (!d || !d.object) return null;
-			let obj = d.object;
-
-			const html_tr = ["<table>", "津波の高さ：" + obj.colorValue + "cm", "</table>"].join("\n");
-
-			return {
-				html: html_tr
-			};
+	let rotateCamera = () => {
+		initialViewState = {
+			...initialViewState,
+			bearing: initialViewState.bearing - 10,
+			transitionDuration: 500,
+			transitionInterpolator: new LinearInterpolator(['bearing']),
+			onTransitionEnd: rotateCamera
 		};
+		deckgl.setProps({ initialViewState });
+	};
 
-		new Deck({
-			initialViewState: {
-				longitude: 137.12,
-				latitude: 33.551,
-				zoom: 4.5,
-				maxZoom: 20,
-				pitch: 40,
-				bearing: -10
-			},
-			controller: {
-				touchRotate: true
-			},
-			layers: [
-				tileLayer, layer
-				],
-			getTooltip: tooltip
-		});
-	</script>
+	let stop = () => {
+		initialViewState = {
+			...initialViewState,
+			bearing: initialViewState.bearing + 0.01,
+			transitionDuration: 0,
+			transitionInterpolator: new LinearInterpolator(['bearing']),
+			onTransitionEnd: stop
+		};
+		deckgl.setProps({ initialViewState });
 
-	</html>
+	};
+
+	const tooltip = (d) => {
+
+		if (!d || !d.object) return null;
+		let obj = d.object;
+
+		const html_tr = ["<table>", "津波の高さ：" + obj.colorValue + "cm", "</table>"].join("\n");
+
+		return {
+			html: html_tr
+		};
+	};
+
+	const deckgl = new DeckGL({
+		mapStyle: 'https://basemaps.cartocdn.com/gl/positron-gl-style/style.json',
+		initialViewState: initialViewState,
+		controller: {
+			touchRotate: true
+		},
+		onViewStateChange: ({ viewState }) => {
+			initialViewState.longitude = viewState.longitude;
+			initialViewState.latitude = viewState.latitude;
+			initialViewState.zoom = viewState.zoom;
+			initialViewState.pitch = viewState.pitch;
+			initialViewState.bearing = viewState.bearing;
+		},
+		layers: [
+			layer
+		],
+		getTooltip: tooltip
+	});
+
+	const button = document.querySelector('.button');
+	const button2 = document.querySelector('.button2');
+	button.addEventListener('click', () => {
+		rotateCamera();
+		$("#rotate").hide();
+		$("#stop").show();
+	});
+
+	button2.addEventListener('click', () => {
+		stop();
+		$("#stop").hide();
+		$("#rotate").show();
+	});
+
+</script>
+
+</html>
