--- a/bbias/index.html
+++ b/bbias/index.html
@@ -169,7 +169,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/r27mkyusyu/"><i class="fas fa-chevron-left"></i> 令和2年九州豪雨を可視化しました。</a>
+      <a class="link-reverse" href="/r2kyusyu/"><i class="fas fa-chevron-left"></i> 令和2年九州豪雨を可視化しました。</a>
     </div>
     
 
