--- a/time/index.html
+++ b/time/index.html
@@ -173,7 +173,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/r27mkyusyu/">令和2年九州豪雨を可視化しました。</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/r2kyusyu/">令和2年九州豪雨を可視化しました。</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
