--- a/r2kyusyu/index.html
+++ b/r2kyusyu/index.html
@@ -28,13 +28,13 @@
 <meta property="og:image" content="https://dpnote.netlify.app/images/post/r2kyusyu.jpg">
 
 
-<meta property="og:url" content="https://dpnote.netlify.app/r27mkyusyu/" />
+<meta property="og:url" content="https://dpnote.netlify.app/r2kyusyu/" />
 <meta property="og:title" content="令和2年九州豪雨を可視化しました。" />
 <meta property="og:description" content="令和2年7月に発生した九州豪雨を３Dマップにて可視化しました。" />
 
 
 
-<link rel="canonical" href="https://dpnote.netlify.app/r27mkyusyu/">
+<link rel="canonical" href="https://dpnote.netlify.app/r2kyusyu/">
 
   
 
@@ -135,7 +135,7 @@
 
     
 
-    <div class="fb-comments" data-href="https://dpnote.netlify.app/r27mkyusyu/" data-width="100%" data-numposts="5"></div>
+    <div class="fb-comments" data-href="https://dpnote.netlify.app/r2kyusyu/" data-width="100%" data-numposts="5"></div>
 
     <ol itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb">
 
