--- a/simulation/h12tokai.html
+++ b/simulation/h12tokai.html
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="平成12年9月の東海豪雨を3Dに可視化" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://dpnote.netlify.app/simulation/h12tokai.png" />
+    <meta property="og:image" content="https://dpnote.netlify.app/simulation/h12tokai.jpg" />
     <meta name="description" content="令和6年7月に起きた東海地方での豪雨を3Dに可視化しました。" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="平成12年9月の東海豪雨を3Dに可視化" />
-    <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/h12tokai.png" />
+    <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/h12tokai.jpg" />
     <meta name="author" content="Saito Hitoshi">
     <meta name="keywords" content="東海,豪雨,東海豪雨,deckgl,3D,3d" />
 
@@ -183,7 +183,7 @@
         };
 
         const deckgl = new DeckGL({
-            mapStyle: 'https://basemaps.cartocdn.com/gl/dark-matter-nolabels-gl-style/style.json',
+            mapStyle: 'https://basemaps.cartocdn.com/gl/positron-gl-style/style.json',
             initialViewState: initialViewState,
             controller: {
                 touchRotate: true
