--- a/higashinihontsunami/index.html
+++ b/higashinihontsunami/index.html
@@ -184,7 +184,7 @@
   <div class="related">
     
       <div class="item1"><a href="/higashinihonarcrotate/">
-              <img src='https://dpnote.netlify.app/images/post/higashinihon.png'>
+              <img src='https://dpnote.netlify.app/images/post/higashinihon.jpg'>
           </a>
 
         <a href="/higashinihonarcrotate/">東日本大震災津波観測地点の可視化アニメーション</a>
