--- a/simulation/higashinihon_arclayer_rotate.html
+++ b/simulation/higashinihon_arclayer_rotate.html
@@ -12,11 +12,11 @@
 
 		<meta property="og:title" content="東日本大震災の津波到達地点の可視化" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://dpnote.netlify.app/simulation/higashinihon.png" />
+		<meta property="og:image" content="https://dpnote.netlify.app/simulation/higashinihon.jpg" />
 		<meta property="og:description" content="東日本大震災の津波到達地点の可視化" />
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="東日本大震災の津波到達地点の可視化" />
-		<meta name="twitter:image" content="https://dpnote.netlify.app/simulation/higashinihon.png" />
+		<meta name="twitter:image" content="https://dpnote.netlify.app/simulation/higashinihon.jpg" />
 		<meta name="twitter:description" content="東日本大震災の津波到達地点の可視化" />
 		<meta name="author" content="仁志">
 		<meta name="keywords" content="東日本大震災,マップ,3Dマップ" />
