--- a/search/index.html
+++ b/search/index.html
@@ -10,7 +10,7 @@
   <meta property="og:locale" content="ja" />
 
   <meta property="og:type" content="website">
-  <meta name="description" content="キーワードからアプリ内を検索できます。">
+  <meta name="description" content="キーワードから投稿記事を検索できます。">
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="">
   <meta name="twitter:title" content="DP Note" />
@@ -27,7 +27,7 @@
 
   <meta property="og:url" content="https://dpnote.netlify.app/" />
   <meta property="og:title" content="DP Note" />
-  <meta property="og:description" content="キーワードからアプリ内を検索できます。" />
+  <meta property="og:description" content="キーワードから投稿記事を検索できます。" />
 
 
   <link rel="canonical" href="https://dpnote.netlify.app/">
@@ -126,8 +126,8 @@
 
     <div class="grid-inverse wrap content">
       <article class="post_content">
-        <h1 class="post_title">アプリ内検索</h1>
-        <p>キーワードを入力すると検索することができます。</p>
+        <h1 class="post_title">サービス内検索</h1>
+        <p>キーワードを入力すると投稿記事を検索することができます。（検索例.熊本地震、東海豪雨など）</p>
         <input type="text" name="text1" id="text" size="15" autocomplete="off" autofocus placeholder="キーワード検索" /> <span id="exp">検 索</span><br>
         <span id="inputWord"></span> <span id="resultCount"></span>
         <div id="result"></div>
@@ -171,20 +171,8 @@
           </div>
         </section>
 
-        <section class="sidebar_inner">
-          <div>
-            <h2 class="mt-4 taxonomy" id="tags-section">防災アプリ紹介</h2>
-            <ul class="ul_menu">
+        
 
-              <a href='https://linkevery2s.github.io/bsinsight/index.html' target="_blank"><img src="https://dpnote.netlify.app/images/application/bsinsight.jpg" alt="防災INSIGHT" width="100%"></a>
-
-              <a href='https://linkevery2s.github.io/iamherenow/index.html' target="_blank"><img src="https://dpnote.netlify.app/images/application/iamherenow.jpg" alt="今、ここにいるよ。" width="100%"></a>
-
-              <a href='https://covid19dynamics.netlify.app/index.html' target="_blank"><img src="https://dpnote.netlify.app/images/application/covid19.jpg" alt="COVID-19 感染症動態" width="100%"></a>
-
-            </ul>
-          </div>
-        </section>
       </aside>
 
     </div>
