--- a/simulation/h30nishinihon.html
+++ b/simulation/h30nishinihon.html
@@ -108,9 +108,9 @@
         <div class="button2" id="stop"><i class="fa-solid fa-stop"></i></div>
     </span>
 
-    <div class="attribution">
+    <!--<div class="attribution">
         © <a href="https://www.data.jma.go.jp/obd/stats/etrn/index.php" target="_blank">気象データ</a>、気象庁
-    </div>
+    </div>-->
 
     <script type="module">
 
