--- a/simulation/higashinihon_arclayer_rotate.html
+++ b/simulation/higashinihon_arclayer_rotate.html
@@ -119,14 +119,14 @@
         <div class="button2" id="stop"><i class="fa-solid fa-stop"></i></div>
     </span>
 
-	<div class="attribution">
+	<!--<div class="attribution">
 		© <a href="https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer" target="_blank"
 			rel="noopener noreferrer">USGS Imagery Only</a>、<a
 			href="https://www.jma.go.jp/jma/kishou/books/saigaiji/saigaiji_201101/saigaiji_201101.html"
 			target="_blank">災害時地震・津波速報 平成23年(2011年)東北地方太平洋沖地震</a>、気象庁：<a
 			href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY
 			4.0</a>
-	</div>
+	</div>-->
 
 	<script type="text/javascript">
 		const {
