--- a/simulation/h12tokai.html
+++ b/simulation/h12tokai.html
@@ -14,7 +14,7 @@
     <meta name="twitter:title" content="平成12年9月の東海豪雨を3Dに可視化" />
     <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/h12tokai.jpg" />
     <meta name="author" content="Saito Hitoshi">
-    <meta name="keywords" content="東海,豪雨,東海豪雨,deckgl,3D,3d" />
+    <meta name="keywords" content="東海,豪雨,東海豪雨,deckgl,3D" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -101,11 +101,11 @@
         <div class="button2" id="stop"><i class="fa-solid fa-stop"></i></div>
     </span>
 
-    <div class="attribution">
+    <!--<div class="attribution">
         © <a href="https://www.data.jma.go.jp/obd/stats/etrn/index.php" target="_blank">気象データ</a>、気象庁：<a
             href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY
             4.0</a>
-    </div>
+    </div>-->
 
     <script type="module">
 
