--- a/simulation/r67tohoku.html
+++ b/simulation/r67tohoku.html
@@ -114,11 +114,11 @@
         <div class="button2" id="stop"><i class="fa-solid fa-stop"></i></div>
     </span>
 
-    <div class="attribution">
+    <!--<div class="attribution">
         © <a href="https://www.data.jma.go.jp/obd/stats/etrn/index.php" target="_blank">気象データ</a>、気象庁：<a
             href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY
             4.0</a>
-    </div>
+    </div>-->
 
     <script type="module">
 
